// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationDetailView display text \`getListResultsMessage\` returns the expected values in the empty results scenario 1`] = `
{
  "content": "No files.",
  "type": "info",
}
`;

exports[`LocationDetailView display text \`getListResultsMessage\` returns the expected values in the empty search results scenario 1`] = `
{
  "content": "No files.",
  "type": "info",
}
`;

exports[`LocationDetailView display text \`getListResultsMessage\` returns the expected values in the failed scenario 1`] = `
{
  "content": "Network got confused",
  "type": "error",
}
`;

exports[`LocationDetailView display text \`getListResultsMessage\` returns the expected values in the loading scenario 1`] = `undefined`;

exports[`LocationDetailView display text \`getListResultsMessage\` returns the expected values in the search exhausted scenario 1`] = `
{
  "content": "Showing results for up to the first 10,000 items.",
  "type": "info",
}
`;

exports[`LocationDetailView display text \`getListResultsMessage\` returns the expected values in the search exhausted with no results scenario 1`] = `
{
  "content": "No results found in the first 10,000 items.",
  "type": "info",
}
`;

exports[`LocationDetailView display text \`getListResultsMessage\` returns the expected values in the search failed scenario 1`] = `
{
  "content": "Network got confused",
  "type": "error",
}
`;

exports[`LocationDetailView display text \`getListResultsMessage\` returns the expected values in the search limit reached scenario 1`] = `undefined`;

exports[`LocationDetailView display text filePreview display text should have correct default values 1`] = `
{
  "closeButtonLabel": "Close",
  "downloadButtonLabel": "Download",
  "emptyFileMessage": "File is empty",
  "entityTagLabel": "Entity tag",
  "errorDescription": "We encountered an issue while loading the file preview.",
  "errorMessage": "Something went wrong",
  "fileInformationTitle": "File Information",
  "filePrefix": "File: ",
  "filePreviewTitle": "File Preview",
  "fileSizeLimitDescription": "This file is too large to preview in the browser. You can download the file to view it with an appropriate application.",
  "generalPreviewErrorDescription": "An unexpected error occurred while loading the file preview. Please try again or download the file to view it with an appropriate application.",
  "getTextErrorMessage": [Function],
  "imageLoadErrorDescription": "The image could not be loaded. This may be due to network issues, file corruption, or an unsupported image format.",
  "keyLabel": "Key",
  "lastModifiedLabel": "Last Modified",
  "retryButtonLabel": "Retry",
  "sizeLabel": "Size",
  "sizeLimitMessage": "File preview not possible due to preview size limit",
  "textLoadErrorDescription": "The text file could not be loaded. This may be due to network issues, file access permissions, or the file being too large to display.",
  "typeLabel": "Type",
  "unknownValue": "Unknown",
  "unsupportedFileDescription": "This file format is not supported for preview. You can download the file to view it with an appropriate application.",
  "unsupportedFileMessage": "File preview not supported for this file type",
  "versionIdLabel": "Version Id",
  "videoLoadErrorDescription": "The video could not be played. This may be due to network issues, file corruption, or an unsupported video format or codec.",
}
`;

exports[`LocationDetailView display text should match snapshot values 1`] = `
{
  "filePreview": {
    "closeButtonLabel": "Close",
    "downloadButtonLabel": "Download",
    "emptyFileMessage": "File is empty",
    "entityTagLabel": "Entity tag",
    "errorDescription": "We encountered an issue while loading the file preview.",
    "errorMessage": "Something went wrong",
    "fileInformationTitle": "File Information",
    "filePrefix": "File: ",
    "filePreviewTitle": "File Preview",
    "fileSizeLimitDescription": "This file is too large to preview in the browser. You can download the file to view it with an appropriate application.",
    "generalPreviewErrorDescription": "An unexpected error occurred while loading the file preview. Please try again or download the file to view it with an appropriate application.",
    "getTextErrorMessage": [Function],
    "imageLoadErrorDescription": "The image could not be loaded. This may be due to network issues, file corruption, or an unsupported image format.",
    "keyLabel": "Key",
    "lastModifiedLabel": "Last Modified",
    "retryButtonLabel": "Retry",
    "sizeLabel": "Size",
    "sizeLimitMessage": "File preview not possible due to preview size limit",
    "textLoadErrorDescription": "The text file could not be loaded. This may be due to network issues, file access permissions, or the file being too large to display.",
    "typeLabel": "Type",
    "unknownValue": "Unknown",
    "unsupportedFileDescription": "This file format is not supported for preview. You can download the file to view it with an appropriate application.",
    "unsupportedFileMessage": "File preview not supported for this file type",
    "versionIdLabel": "Version Id",
    "videoLoadErrorDescription": "The video could not be played. This may be due to network issues, file corruption, or an unsupported video format or codec.",
  },
  "getActionListItemLabel": [Function],
  "getDateDisplayValue": [Function],
  "getListItemsResultMessage": [Function],
  "getTitle": [Function],
  "loadingIndicatorLabel": "Loading",
  "searchClearLabel": "Clear search",
  "searchPlaceholder": "Search current folder",
  "searchSubfoldersToggleLabel": "Include subfolders",
  "searchSubmitLabel": "Submit",
  "selectAllFilesLabel": "Select all files",
  "selectFileLabel": "Select file",
  "selectFolderLabel": "Select folder",
  "tableColumnLastModifiedHeader": "Last modified",
  "tableColumnNameHeader": "Name",
  "tableColumnSizeHeader": "Size",
  "tableColumnTypeHeader": "Type",
}
`;
